[gd_scene load_steps=14 format=3 uid="uid://cms0fowowe5kl"]

[ext_resource type="Script" path="res://scripts/Cop.gd" id="1_dfkoj"]
[ext_resource type="Texture2D" uid="uid://iuts5ph73bjh" path="res://assets/characters/cop_spritesheet.png" id="2_h6mrx"]
[ext_resource type="AudioStream" uid="uid://ch11mw2wptys7" path="res://assets/sounds/SmallGunshot.mp3" id="3_nr8dc"]
[ext_resource type="Texture2D" uid="uid://dtafyd2pihw8k" path="res://assets/projectiles/blood.png" id="4_rl17a"]
[ext_resource type="AudioStream" uid="uid://bla7wxh4qwtj1" path="res://assets/sounds/PersonDeath.mp3" id="5_8i71r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2n8at"]
atlas = ExtResource("2_h6mrx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_be1ya"]
atlas = ExtResource("2_h6mrx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_todd0"]
atlas = ExtResource("2_h6mrx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_n72qi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n8at")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_be1ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_todd0")
}],
"loop": true,
"name": &"moving",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3bxy"]
size = Vector2(16, 42)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vklmo"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 75.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 2.0

[sub_resource type="Animation" id="Animation_hooo7"]
resource_name = "death"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BloodParticle:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_do3rh"]
_data = {
"death": SubResource("Animation_hooo7")
}

[node name="Cop" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_dfkoj")
points = 4
level = 1
health = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -9)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_n72qi")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q3bxy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.8, 2.1)

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nr8dc")
volume_db = -18.0
max_distance = 500.0

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="BulletSpawn" type="Marker2D" parent="."]

[node name="BloodParticle" type="GPUParticles2D" parent="." groups=["particles"]]
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_vklmo")
texture = ExtResource("4_rl17a")
lifetime = 0.8
one_shot = true
speed_scale = 1.2
explosiveness = 1.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8i71r")
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_do3rh")
}

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
